# pisa

./: .gitignore
include/pisa/: forward_index_builder.hpp
script/: corpora_text.py  dump_term_doc_freq.py  inverted_index.py
src/: CMakeLists.txt
